force-app/main/default/objects/RGO__c/RGO__c.object-meta.xml
<CustomObject>
    <label>RGO</label>
    <pluralLabel>RGOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>RGO Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>