force-app/main/default/objects/RGO__c/fields/Employment__c.field-meta.xml
<CustomField>
    <fullName>Employment__c</fullName>
    <label>Employment</label>
    <type>Lookup</type>
    <referenceTo>Employment__c</referenceTo>
    <relationshipName>RGO_Employment</relationshipName>
</CustomField>