force-app/main/default/objects/RGO__c/fields/Goods_type__c.field-meta.xml
<CustomField>
    <fullName>Goods_type__c</fullName>
    <label>Goods type</label>
    <type>Text</type>
    <length>255</length>
</CustomField>