force-app/main/default/objects/RGO__c/fields/Last_income__c.field-meta.xml
<CustomField>
    <fullName>Last_income__c</fullName>
    <label>Last income</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>